--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,6 +111,16 @@ header {
 
 }
 
+/* 작은 글씨 스타일 3*/
+.text-sbar {
+
+  font-size: 0.8rem; /* 또는 13px, 14px 등 원하는 크기 */
+  line-height: 1.2;
+  color:#f0f1f1;
+  font-family: 맑은고딕;
+
+}
+
 
 .nav-links {
   white-space: normal; /* 줄바꿈 허용 */
@@ -245,6 +255,17 @@ header {
   background-color: transparent;
   border: 2px solid #74B9FF;
   color: #74B9FF;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 700;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn-maincard {
+  background-color: transparent;
+  border: 2px solid #74B9FF;
+  color: #f1f1f1;
   padding: 10px 20px;
   border-radius: 8px;
   cursor: pointer;
