--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,46 @@ body {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.container_b {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}  
+
+.container_c {
+  width: 90%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.container_l {  
+  width: 60%;
+  max-width: 300px;
+  margin: 0 auto;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+}
+
+.container_lc {  
+  width: 90%;
+  max-width: 300px;
+  margin: 0 auto;
+  padding-top: 0.5rem;
+  padding-bottom: 1rem;
+}
+
+.container_m {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 header {
@@ -147,6 +187,20 @@ header {
   font-family: 'Noto Sans KR', 'Apple SD Gothic Neo', 'Malgun Gothic', sans-serif;
   text-align: center;
   margin-bottom: 30px;
+   background-color: var(--color-primary) !important;
+  color: var(--color-background) !important;
+  padding: 15px 80px;
+  border: 2px solid white;
+  border-radius: 30px;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-weight: 700;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  flex: 0 0 200px;
+
 
 }
 
@@ -162,8 +216,6 @@ header {
      3px -1px 0 white,
     -3px  1px 0 white,
      3px  1px 0 white;
-
-
 }
 
 .hero p {
@@ -175,6 +227,57 @@ header {
   margin-right: auto;
 
 }
+
+.proD {
+padding: 3px;
+
+}
+
+.postsDetail {
+  border-bottom:  1px solid #3678b9;
+  padding-top: 10px;
+  padding-bottom: 13px;;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+.postsDetailLetter {
+  padding-top: 30px;;
+  padding-bottom: 30px;;
+}
+
+.postsDetailR {
+  padding-top: 10px;;
+  margin-bottom: 20px;
+}
+
+.postsDetailRp {
+  width: 97%;
+  border-bottom:  1px solid #d6e1ec;
+  padding-top: 10px;;
+  margin-bottom: 10px;
+  margin-left: 25px;
+}
+
+.postsDetailRpL {
+  border: 1px solid #3678b9;
+  border-radius: 10px;
+  padding-top: 10px;;
+  padding-bottom: 10px;;
+  margin-bottom: 10px;
+  margin-left: 25px;
+}
+
+.postsDetailRpr {
+  width: 97%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mrBtn {
+  margin-right: 25px;
+}
+
 
 .btn-primary {
   background-color: var(--color-primary) !important;
@@ -190,8 +293,6 @@ header {
   text-decoration: none;
   transition: background-color 0.3s ease, color 0.3s ease;
   flex: 0 0 200px;
-
-
 }
 
 .btn-primary:hover {
@@ -201,13 +302,108 @@ header {
   transform: translateY(-5px);
 }
 
+
+.btn-login {
+  background-color: var(--color-primary) !important;
+  color: var(--color-background) !important;
+  padding: 2px 10px; /* 적당히 줄여서 가로 패딩 조절 */
+  width: 130px; /* 원하는 고정 폭 지정 */
+  max-width: 100%; /* 반응형으로 너무 커지지 않도록 */
+  border: 2px solid white;
+  border-radius: 10px;
+  font-size: clamp(1rem, 2vw, 1rem);
+  font-weight: 700;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn-login:hover {
+  background-color: var(--color-primary) !important;
+  color: var(--color-background) !important;
+  box-shadow: 0 4px 12px rgba(54, 120, 185, 0.6);
+  transform: translateY(-5px);
+}
+
+.btn-loginA {
+  background-color: var(--color-primary) !important;
+  color: var(--color-background) !important;
+  padding: 2px 10px; /* 적당히 줄여서 가로 패딩 조절 */
+  width: 180px; /* 원하는 고정 폭 지정 */
+  height: 50px;
+  max-width: 100%; /* 반응형으로 너무 커지지 않도록 */
+  border: 2px solid white;
+  border-radius: 10px;
+  font-size: clamp(1rem, 2vw, 1rem);
+  font-weight: 700;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn-loginA:hover {
+  background-color: var(--color-primary) !important;
+  color: var(--color-background) !important;
+  box-shadow: 0 4px 12px rgba(54, 120, 185, 0.6);
+  transform: translateY(-5px);
+}
+
+.btn-loginR {
+  background-color: #e25597 ;
+  color: var(--color-background) !important;
+  padding: 2px 10px; /* 적당히 줄여서 가로 패딩 조절 */
+  width: 130px; /* 원하는 고정 폭 지정 */
+  max-width: 100%; /* 반응형으로 너무 커지지 않도록 */
+  border: 2px solid white;
+  border-radius: 10px;
+  font-size: clamp(1rem, 2vw, 1rem);
+  font-weight: 700;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn-loginR:hover {
+  background-color: #ee4393 ;
+  color: var(--color-background) !important;
+  box-shadow: 0 4px 12px rgba(224, 69, 173, 0.6);
+  transform: translateY(-5px);
+}
+
+.btn-loginG {
+  background-color: #999ca0 ;
+  color: var(--color-background) !important;
+  padding: 2px 10px; /* 적당히 줄여서 가로 패딩 조절 */
+  width: 130px; /* 원하는 고정 폭 지정 */
+  max-width: 100%; /* 반응형으로 너무 커지지 않도록 */
+  border: 2px solid white;
+  border-radius: 10px;
+  font-size: clamp(1rem, 2vw, 1rem);
+  font-weight: 700;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn-loginG:hover {
+  background-color: #aab0b6 ;
+  color: var(--color-background) !important;
+  box-shadow: 0 4px 12px rgba(122, 121, 122, 0.6);
+  transform: translateY(-5px);
+}
+
+
+
 .products-section {
   color: var(--color-primary-light) !important;
   display: flex;
   justify-content: center;
   gap: 50px;
   flex-wrap: wrap;
-
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
@@ -296,6 +492,88 @@ header {
   box-shadow: 0 12px 30px rgba(54, 120, 185, 0.8);
 }
 
+
+.create-f {
+  width: 100%; /* ✅ 부모 너비에 맞춰 채움 */
+  gap: 10px;
+  flex-wrap: wrap;
+  padding-bottom: 1rem;
+  color: var(--color-primary-dark);
+}
+
+.create-a {
+  width: 99%; /* ✅ 부모 너비에 맞춰 채움 */
+  gap: 10px;
+  flex-wrap: wrap;
+  padding-left: 0.4rem;
+  color: var(--color-primary-dark);
+}
+
+.create-h {
+  display: flex;             /* ✅ flex 레이아웃 활성화 */
+  flex-direction: row;       /* 가로 정렬 */
+  flex-wrap: wrap;           /* 줄 바꿈 허용 */
+  gap: 10px;
+  width: 100%;               /* 필요한 경우 늘려주세요 */
+  padding-bottom: 1rem;
+  color: var(--color-primary-dark);
+}
+
+
+.create-q {
+  width: 20%; /* ✅ 부모 너비에 맞춰 채움 */
+  display: flex;             /* ✅ flex 레이아웃 활성화 */
+  flex-direction: row;       /* 가로 정렬 */
+  flex-wrap: wrap;           /* 줄 바꿈 허용 */
+  gap: 10px;
+  padding-bottom: 1rem;
+  color: var(--color-primary-dark);
+}
+
+.create-q {
+  width: 19%; /* ✅ 부모 너비에 맞춰 채움 */
+  flex-wrap: wrap;           /* 줄 바꿈 허용 */
+  gap: 10px;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+  padding-bottom: 0.3rem;
+  color: var(--color-primary-dark);
+}
+
+.gong_b {
+  padding-bottom: 0.5rem;
+}
+
+.padR {
+  padding-right: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.padT {
+  padding-top: 0.5rem;
+}
+
+.padL {
+  padding-left: 0.5rem;
+}
+
+
+.btn-create {
+  color: var(--color-background);
+  padding: 2px 5px;
+  border: 2px solid white;
+  border-radius: 30px;
+  font-size: clamp(1.2rem, 2vw, 1.2rem);
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: inline-block;
+  text-decoration: none;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+
+
 footer {
   background-color: var(--color-background) !important;
   padding: 25px 0;
@@ -349,3 +627,4 @@ footer {
     flex-direction: column;
   }
 }
+
